--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   dio: ^4.0.6
   json_serializable: ^6.5.4
   json_annotation: ^4.7.0
+  filesize: ^2.0.1
 
 dev_dependencies:
   flutter_test:
