--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hello_flutter
+name: textbook_library
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -33,16 +33,17 @@ dependencies:
     sdk: flutter
   sliver_tools: ^0.2.5
   sliver_header_delegate: ^0.0.3
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   dio: ^4.0.6
   json_serializable: ^6.5.4
   json_annotation: ^4.7.0
   filesize: ^2.0.1
+  flutter_riverpod: ^2.1.3
+  shimmer: ^2.0.0
+  advance_pdf_viewer:
+    git:
+      url: https://github.com/enveraltin/pdf_viewer
 
 dev_dependencies:
   flutter_test:
