--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "hello_flutter",
-    "short_name": "hello_flutter",
+    "name": "textbook_library",
+    "short_name": "textbook_library",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
