--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "hello_flutter" "\0"
+            VALUE "CompanyName", "net.thecodeblog" "\0"
+            VALUE "FileDescription", "textbook_library" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "hello_flutter" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "hello_flutter.exe" "\0"
-            VALUE "ProductName", "hello_flutter" "\0"
+            VALUE "InternalName", "textbook_library" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 net.thecodeblog. All rights reserved." "\0"
+            VALUE "OriginalFilename", "textbook_library.exe" "\0"
+            VALUE "ProductName", "textbook_library" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
