--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   advance_pdf_viewer:
     git:
       url: https://github.com/enveraltin/pdf_viewer
+  go_router: ^6.0.1
 
 dev_dependencies:
   flutter_test:
