--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
     git:
       url: https://github.com/enveraltin/pdf_viewer
   go_router: ^6.0.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
